--- a/views/home.ejs
+++ b/views/home.ejs
@@ -146,7 +146,7 @@
                     <div class="copy-group">
                         <input 
                             type="text" 
-                            id="shortUrl" 
+                            id="shortUrl" 7777777777777777
                             value="<%= data.url %>"
                             readonly
                         />
